# winternitz-verifier-risc0

./: .gitignore  Cargo.toml  README.md  headerchain_build.dockerfile  lc_proof_verifier_build.dockerfile  profile.pb  winternitz_build.dockerfile  work_only_build.dockerfile
core/: Cargo.toml  cargo.toml
core/src/: constants.rs  error.rs  field.rs  groth16.rs  groth16_utils.rs  lib.rs  light_client_proof.rs  utils.rs  winternitz.rs  zkvm.rs
elfs/: regtest-headerchain-guest  regtest-lc-proof-verifier-guest  regtest-winternitz-guest  regtest-work-only-guest  testnet4-headerchain-guest  testnet4-winternitz-guest
headerchain/: Cargo.toml  build.rs
headerchain/guest/: Cargo.toml
headerchain/guest/src/: main.rs
host/: Cargo.toml
host-light-client/: Cargo.toml
host-light-client/src/: lib.rs  main.rs
host/src/: lib.rs  main.rs
lc-proof-verifier/: Cargo.toml  build.rs
lc-proof-verifier/guest/: Cargo.toml
lc-proof-verifier/guest/src/: lib.rs  main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
winternitz/: Cargo.toml  build.rs
winternitz/guest/: Cargo.toml
winternitz/guest/src/: constants.rs  lc_proof.rs  lib.rs  main.rs
work-only/: build.rs
work-only/guest/: Cargo.toml
work-only/guest/src/: lib.rs  main.rs
work_only/: Cargo.toml
work_only/guest/: Cargo.toml
work_only/guest/src/: main.rs
