[workspace]
resolver = "2"
members = ["host", "winternitz", "winternitz/guest", "core", "headerchain", "headerchain/guest", "work-only", "work-only/guest"]

[workspace.dependencies]
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
