[package]
name = "winternitz-core"
version = "1.0.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
risc0-zkvm = { version = "1.2.2", default-features = false, features = ["std"] }
risc0-groth16 = { version = "1.2.2" }
serde = { version = "1.0", optional = true, features = ["derive"] }
bitcoin = { version = "0.32.5", features = ["rand-std", "serde"] }
rand = { version = "0.8", features = ["small_rng"] }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ripemd = "0.1.3"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-groth16 = { version="0.5.0", default-features = false }
ark-std = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"
borsh = {version = "1.5.3", features = ["derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"

