[package]
name = "host-light-client"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2.3", features = ["metal"]}
winternitz-core = { path = "../core" }
anyhow = "1.0"
alloy = {version = "0.1", features = ["provider-http", "serde"]}
alloy-rpc-types = { version = "0.11.1" }
alloy-primitives = { version = "0.6", features = ["serde"] }
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["rt-multi-thread"]}
bincode = "1.3.3"
hex = "0.4.3"
serde = "1.0.217"
borsh = "1.5.5"
alloy-rpc-types-eth = { version = "0.11.1", features = ["serde"] } 
ethereum-types = "0.15.1"
hex-literal = "0.4.1"

