[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
winternitz = { path = "../winternitz" }
headerchain ={  path = "../headerchain" }
work-only = { path = "../work_only" }
risc0-zkvm = { version = "1.2.2", features = ["metal"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
winternitz-core = { path = "../core" }
header-chain = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", rev="a233e27" }
borsh = {version = "1.5.3", features = ["derive"] }

[features]
metal = ["risc0-zkvm/metal"]

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }