[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
work-only-guest = { path = "../work-only/guest" }
risc0-zkvm = { version = "1.2.3", features = ["metal"]}
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-groth16 = "0.5.0"
ark-std = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
winternitz-core = { path = "../core" }
header-chain = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", rev="a233e27" }
borsh = {version = "1.5.3", features = ["derive"] }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
num-bigint = "0.4.6"
num-traits = "0.2.19"
risc0-groth16 = "1.2.3"

[features]
metal = ["risc0-zkvm/metal"]
