[package]
name = "lc-proof-verifier-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.3", default-features = false, features = ['std'] }
hex = "0.4.1"
hex-literal = "0.4.1"
jmt = "0.11.0"
borsh = "1.5.5"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
serde = "1.0.217"
alloy-primitives = { version = "0.8.7", features = ["serde"] }
alloy-rpc-types = "0.11.1"
alloy-serde = { version = "0.4.2", default-features = false }
serde_json = "1.0.138"
bincode = "1.3.3"
alloy-rpc-types-eth = { version = "0.11.1", features = ["serde"] } 

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
