[package]
name = "winternitz"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.2", default-features = false, features = ['std'] }
winternitz-core = { path = "../../core" }
serde = "1.0"
bitcoin = { version = "0.32.5", features = ["rand-std"] }

[[example]]
name = "guest"
path ="src/main.rs"